--- a/html/style.css
+++ b/html/style.css
@@ -17,6 +17,10 @@ h1 {
 }
 footer {
   text-align: center;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
 }
 footer > * {
   display: inline;
