--- a/www/style.css
+++ b/www/style.css
@@ -25,6 +25,13 @@ header {
   overflow-y: auto;
 }
 
+#gridcontent {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
 footer {
   text-align: center;
   flex: 1;
